fix(rate): remove vertical-align

--- a/src/packages/__VUE/rate/index.scss
+++ b/src/packages/__VUE/rate/index.scss
@@ -1,6 +1,5 @@
 .nut-rate {
   display: inline-flex;
-  vertical-align: bottom;
   &-item {
     display: flex;
     flex-shrink: 0;
